--- a/why-us.html
+++ b/why-us.html
@@ -8,52 +8,39 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 
 
-	<title>Accent Translation</title>	
+	<title>Why Us - Accent Translation</title>	
 
-	<meta name='keywords' content=''>
-	<meta name='description' content=''>
-	<meta name='subject' content="">
-	<meta name='copyright' content=''> 
+	<meta name='keywords' content='translation, translate, toronto, toronto translation, canada, accent translation, accent, immigration, immigration papers, immigrants, immigration translations'>
+	<meta name='description' content='Established by a professional translator with 4 international certifications, today Accent Translations is the only translation company in Canada specializing in notarized and certified translations for immigration purposes. We have been in the translation industry for almost 30 years.'>
+	<meta name='subject' content="translation"> 
 	<meta name='language' content='EN'>
 	<meta name='robots' content='index,follow'>
 	<meta name='Classification' content='Business'>
-	<meta name='designer' content=''>
-	<meta name='reply-to' content=''>
-	<meta name='owner' content=''>
-	<meta name='url' content=''>
-	<meta name='identifier-URL' content=''>
-	<meta name='pagename' content=''>
+	<meta name='designer' content='Arttic Fox'>
+	<meta name='url' content='https://accenttranslations.net/'>
+	<meta name='identifier-URL' content='https://accenttranslations.net/'>
+	<meta name='pagename' content='Why Us'>
 	<meta name='HandheldFriendly' content='True'>
 	<meta name='MobileOptimized' content='414'>
 
-
-	<!-- 
-	<link rel="apple-touch-icon" sizes="57x57" href="assets/brand/favicon/apple-icon-57x57.png">
-	<link rel="apple-touch-icon" sizes="60x60" href="assets/brand/favicon/apple-icon-60x60.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="assets/brand/favicon/apple-icon-72x72.png">
-	<link rel="apple-touch-icon" sizes="76x76" href="assets/brand/favicon/apple-icon-76x76.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="assets/brand/favicon/apple-icon-114x114.png">
-	<link rel="apple-touch-icon" sizes="120x120" href="assets/brand/favicon/apple-icon-120x120.png">
-	<link rel="apple-touch-icon" sizes="144x144" href="assets/brand/favicon/apple-icon-144x144.png">
-	<link rel="apple-touch-icon" sizes="152x152" href="assets/brand/favicon/apple-icon-152x152.png">
-	<link rel="apple-touch-icon" sizes="180x180" href="assets/brand/favicon/apple-icon-180x180.png">
-	<link rel="icon" type="image/png" sizes="192x192"  href="assets/brand/favicon/android-icon-192x192.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="assets/brand/favicon/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="96x96" href="assets/brand/favicon/favicon-96x96.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="assets/brand/favicon/favicon-16x16.png"> 
-	<link rel="manifest" href="assets/brand/favicon/manifest.json">
+	<link rel="apple-touch-icon" sizes="57x57" href="assets/favicons.ico/apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="assets/favicons.ico/apple-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="assets/favicons.ico/apple-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="assets/favicons.ico/apple-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="assets/favicons.ico/apple-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="assets/favicons.ico/apple-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="assets/favicons.ico/apple-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="assets/favicons.ico/apple-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="assets/favicons.ico/apple-icon-180x180.png">
+	<link rel="icon" type="image/png" sizes="192x192"  href="assets/favicons.ico/android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="assets/favicons.ico/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="assets/favicons.ico/favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="assets/favicons.ico/favicon-16x16.png">
+	<link rel="manifest" href="assets/favicons.ico/manifest.json">
 	<meta name="msapplication-TileColor" content="#ffffff">
-	<meta name="msapplication-TileImage" content="assets/brand/favicon/ms-icon-144x144.png">
-	-->
+	<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
 	<meta name="theme-color" content="#ffffff">
 
-	<!-- Google Tag Manager -->
-	<!-- <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-	j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-	})(window,document,'script','dataLayer','GTM-W5T8QRW');</script> -->
-	<!-- End Google Tag Manager -->
 </head>
 <body>
 	
@@ -86,9 +73,9 @@
 </svg></a></h1>
 
 			<div id="social">
-				<a href=""><button><i class="fab fa-facebook-f"></i></button></a>
-				<a href=""><button><i class="fab fa-twitter"></i></button></a>
-				<button id="backToTop"><img src="assets/svg/up-arrow.svg"></button>
+				<!-- <a href=""><button><i class="fab fa-facebook-f"></i></button></a>
+				<a href=""><button><i class="fab fa-twitter"></i></button></a> -->
+				<button id="backToTop"><img src="assets/svg/up-arrow.svg" alt="back to top arrow image"></button>
 			</div>
 		</div>
 
@@ -101,7 +88,7 @@
 				<li><a href="./why-us.html">Why Us</a></li>
 				 
 				<li><a href="./contact-us.html">Contact Us</a></li>
-				<li><a href="mailto:office3@accenttranslation.net?Subject=Please%20can%20I%20get%20a%20quote" target="_top"><button class="btn btnSmall">Get a Quote</button></a></li>
+				<li><a href="https://goo.gl/forms/hHhQUBiBRpvqlrf73" target="_blank"><button class="btn btnSmall">Get a Quote</button></a></li>
 			</ul>
 		</nav>
 		
@@ -135,42 +122,42 @@
 			<div class="whiteContainer">
 				<div id="whyus_list">
 					<div>
-						<div class="circle_shape"> <img src="assets/svg/exp.svg">	</div>
+						<div class="circle_shape"> <img src="assets/svg/exp.svg" alt="experience icon">	</div>
 						<h4>Experience</h4>
 		        <p>In business since 1991</p>
 		      </div>
 					<div>
-						<div class="circle_shape"><img src="assets/svg/speed.svg">	</div>
+						<div class="circle_shape"><img src="assets/svg/speed.svg" alt="speed icon">	</div>
 						<h4>Speed</h4>
 						<p>Fast delivery of translations</p>
 					</div>
 					<div>
-						<div class="circle_shape"><img src="assets/svg/confidential.svg">	</div>
+						<div class="circle_shape"><img src="assets/svg/confidential.svg" alt="confidentiality icon">	</div>
 						<h4>Confidentiality</h4>
 						<p>We protect your client’s privacy</p>
 					</div>
 					<div>
-						<div class="circle_shape"><img src="assets/svg/reliability.svg">	</div>
+						<div class="circle_shape"><img src="assets/svg/reliability.svg" alt="realibility icon">	</div>
 						<h4>Reliability</h4>
 						<p>Quality control in-house translators</p>
 					</div>
 					<div>
-						<div class="circle_shape"><img src="assets/svg/competitiveness.svg">	</div>
+						<div class="circle_shape"><img src="assets/svg/competitiveness.svg" alt="competitiveness icon">	</div>
 						<h4>Competitiveness</h4>
 						<p>Right pricing with free notarization of the affidavit</p>
 					</div>
 					<div>
-						<div class="circle_shape"><img src="assets/svg/insurance.svg">	</div>
+						<div class="circle_shape"><img src="assets/svg/insurance.svg" alt="erros and omissions icon">	</div>
 						<h4>Errors & Omissions Insurance</h4>
 						<p>We are insured with Lloyd’s of London against for Errors & Omissions</p>
 					</div>
 					<div>
-						<div class="circle_shape"><img src="assets/svg/specialization.svg">	</div>
+						<div class="circle_shape"><img src="assets/svg/specialization.svg" alt="specialization icon">	</div>
 						<h4>Specialization</h4>
 						<p>The only agency specialized in translations for immigration and the only one offering a referral system</p>
 					</div>
 					<div>
-						<div class="circle_shape"><img src="assets/svg/userfriendly.svg">	</div>
+						<div class="circle_shape"><img src="assets/svg/userfriendly.svg" alt="user friendly icon">	</div>
 						<h4>User-Friendly</h4>
 						<p>Dedicated website in 8 languages with an explanatory video for applicants</p>
 						<p>This is why our clients appreciate our work and are loyal to our brand.</p>
@@ -219,14 +206,14 @@
 	<footer class="section">
 		<nav>
 			<div>
-				<h6>By Profession</h6>
+				<h6>Application Related</h6>
 				<ul>
 					<li><a href="./imm-applicants.html">Immigration Applications</a></li>
 					<li><a href="./imm-professionals.html">Immigration Professionals</a></li>
 				</ul>
 			</div>
 			<div>
-				<h6>Static Pages</h6>
+				<h6>About Us</h6>
 				<ul>
 					<li><a href="./who-we-are.html">Who We Are</a></li>
 					<li><a href="./why-us.html">Why Us</a></li>
@@ -243,11 +230,12 @@
 		<div id="legal">
 			<div></div>
 			<div id="footerLogo">
-				<img src="assets/svg/logo-white.svg">
+				<img src="assets/svg/logo-white.svg" alt="logo white">
 			</div>
 			<div class="dividerWhite"></div>
 			<div><small>All rights of the content is reserved.</small></div>
-			<div id="copyright"><small>© 2014 Accent Translations Inc.</small></div>
+			<div id="copyright"><small>© 2019 Accent Translations Inc.</small>
+				<small>Designed by <a href="https://artticfox.com" target="_blank">Arttic Fox</a>.</small></div>
 		</div>
 	</footer>
 
@@ -255,14 +243,15 @@
 	<script defer src="https://use.fontawesome.com/releases/v5.0.2/js/all.js"></script>
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
 	<script src="public/js/main.js"></script> 
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-98670015-1"></script> -->
-	<!-- <script>
-	window.dataLayer = window.dataLayer || [];
-	function gtag(){dataLayer.push(arguments);}
-	gtag('js', new Date());
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-135995143-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-	gtag('config', 'UA-98670015-1');
-	</script> -->
+  gtag('config', 'UA-135995143-1');
+</script>
+
 </body>
 </html>
